Refactor LCFramework to accept authKey parameter
- Replaces direct `sys.env` calls inside Server with parameter injection from `LCFramework`.
- Removes reflection-based environment variable mutation in tests, making them more robust and avoiding errors on modern JVMs.
- Ensured embedded H2 database tests can run without conflicts by removing premature stop calls.

Co-authored-by: hrj <345879+hrj@users.noreply.github.com>